@@ -31,6 +31,7 @@ import com.google.common.util.concurrent.MoreExecutors;
 import com.github.benmanes.caffeine.cache.*;
 import com.codahale.metrics.Timer;
 import org.apache.cassandra.config.DatabaseDescriptor;
+import org.apache.cassandra.io.compress.BufferType;
 import org.apache.cassandra.io.sstable.CorruptSSTableException;
 import org.apache.cassandra.io.util.*;
 import org.apache.cassandra.metrics.CacheMissMetrics;
@@ -152,7 +153,7 @@ public class ChunkCache
         metrics.misses.mark();
         try (Timer.Context ctx = metrics.missLatency.time())
         {
-            ByteBuffer buffer = BufferPool.get(key.file.chunkSize());
+            ByteBuffer buffer = BufferPool.get(key.file.chunkSize(), key.file.preferredBufferType());
             assert buffer != null;
             rebufferer.readChunk(key.position, buffer);
             return new Buffer(buffer, key.position);
